3.2.1 (2016-10-DD)
------------------

Enhancements
 - [web] add constraints to start/end dates of automatic responder (#3841)
 - [web] updated Angular to version 1.5.8

Bug fixes
 - [web] fixed tasks list when some weekdays are disabled
 - [web] fixed automatic refresh of calendar view


3.2.0 (2016-10-03)
------------------

New features
 - [web] added IMAP folder subscriptions management (#255)
 - [web] keyboard hotkeys (#1711, #1467, #3817)
 - [eas] initial support for server-side mailbox search operations

Enhancements
 - [web] don't allow a recurrence rule to end before the first occurrence
 - [web] updated Angular Material to version 1.1.1
 - [web] show user's name upon successful login
 - [web] inserted unseen messages count and mailbox name in browser's window title
 - [web] disable JavaScript theme generation when SOGoUIxDebugEnabled is set to NO
 - [web] added Serbian (sr) translation - thanks to Bogdanović Bojan
 - [web] added sort by arrival date in Mail module (#708)
 - [web] restored "now" line in Calendar module
 - [web] updated CKEditor to version 4.5.11
 - [web] allow custom email address to be one of the user's profile (#3551)
 - [eas] propagate message submission errors to EAS clients (#3774) 

Bug fixes
 - [eas] properly generate the BusyStatus for normal events
 - [eas] properly escape all email and address fields
 - [eas] properly generate yearly rrule
 - [eas] make sure we don't sleep for too long when EAS processes need interruption
 - [eas] fixed recurring events with timezones for EAS (#3822)
 - [web] restored functionality to save unknown recipient emails to address book on send
 - [web] fixed ripple blocking the form when submitting no values (#3808)
 - [web] fixed error handling when renaming a mailbox
 - [web] handle binary content transfer encoding when displaying mails
 - [web] removed resize grips to short events (#3771)
 - [core] strip protocol value from proxyAddresses attribute (#3182)