@@ -372,7 +372,9 @@
               <var:string label:value="Members"/>
             </label>
             <md-contact-chips
+                class="sg-chips-autocomplete"
                 ng-model="editor.card.refs"
+                ng-model-options="{ debounce: { default: 500 } }"
                 md-contacts="editor.userFilter($query, editor.card.refs)"
                 md-contact-name="$$fullname"
                 md-contact-image="$$image"
